--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>ReactCodingTest</title>
-    <base href="/tf-react-coding-test/">
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -50,5 +50,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script src="runtime.98eb99986ec791f09a76.js" type="module"></script><script src="runtime.3af5bfd00be4e27e5d25.js" nomodule defer></script><script src="polyfills.96d21434392b9c1041d3.esm.js" type="module"></script><script src="polyfills.cdc03af9e2512d00c7eb.es5.js" nomodule defer></script><script src="main.f43ed8f3212e8a76f310.esm.js" type="module"></script><script src="main.f9716de1dd8fb1794217.es5.js" nomodule defer></script></body>
+  <script src="runtime.569fcf2c3ae22ccaed1e.js" type="module"></script><script src="runtime.00022bc11dc1cd722888.js" nomodule defer></script><script src="polyfills.303cf3be5e69b2cd81b5.esm.js" type="module"></script><script src="polyfills.1d4d673154ab17ef8a09.es5.js" nomodule defer></script><script src="main.6789f44e9f6b0fd7c242.esm.js" type="module"></script><script src="main.159c09e8acfe30fdf517.es5.js" nomodule defer></script></body>
 </html>
