--- a/200.html
+++ b/200.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>ReactCodingTest</title>
-    <base href="/tf-react-coding-test/">
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -50,5 +50,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script src="runtime.1801522beda9e654ce67.js" type="module"></script><script src="runtime.05abf66e6fd62eb6c5c2.js" nomodule defer></script><script src="polyfills.303cf3be5e69b2cd81b5.esm.js" type="module"></script><script src="polyfills.1d4d673154ab17ef8a09.es5.js" nomodule defer></script><script src="main.a044e3dad039da39d48f.esm.js" type="module"></script><script src="main.f07b4a3e46411b6fd5e7.es5.js" nomodule defer></script></body>
+  <script src="runtime.b7deefe163c9f649f36d.js" type="module"></script><script src="runtime.a218a542475f751a696f.js" nomodule defer></script><script src="polyfills.303cf3be5e69b2cd81b5.esm.js" type="module"></script><script src="polyfills.1d4d673154ab17ef8a09.es5.js" nomodule defer></script><script src="main.3cf4a8f08190d510af6f.esm.js" type="module"></script><script src="main.18dad685682d2e73af8b.es5.js" nomodule defer></script></body>
 </html>
